modules/envoy-gateway/resources/http-to-https-redirect.yaml
# Upgrades HTTP requests to HTTPS
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
    - name: eg
      sectionName: http
  hostnames:
    - "*.sagedpe.org"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
